k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/websocket-services: "notification-service"
spec:
  rules:
    - host: api.kuldeepbishnoi.tech
      http:
        paths:
          # Route for Ping (Request Service)
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: request-service
                port:
                  number: 80
          # Route for API v1 Submission (Request Service)
          - path: /api/v1/submission
            pathType: Prefix
            backend:
              service:
                name: request-service
                port:
                  number: 80
          # Route for Notification Service
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
